--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "angular2": "^2.0.0-beta.17",
     "ejs": "2.3.4",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.35.1",
+    "express": "^4.13.4",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-coffee": "0.13.0",
@@ -19,10 +23,15 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
+    "kerberos": "0.0.21",
     "rc": "1.0.1",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "^5.0.0-beta.6",
     "sails": "~0.12.3",
     "sails-disk": "~0.10.9",
-    "sails-mongo": "^0.12.0"
+    "sails-mongo": "^0.12.0",
+    "systemjs": "0.19.6",
+    "zone.js": "^0.6.12"
   },
   "scripts": {
     "debug": "node debug app.js",
