--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-sync": "0.2.4",
     "include-all": "~0.1.6",
     "kerberos": "0.0.21",
+    "pug": "^0.1.0",
     "rc": "1.0.1",
     "reflect-metadata": "0.1.2",
     "rxjs": "^5.0.0-beta.6",
