--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "sails-disk": "~0.10.9",
     "sails-mongo": "^0.12.0",
     "systemjs": "0.19.6",
+    "waterlock": "^0.1.0",
+    "waterlock-facebook-auth": "0.0.3",
+    "waterlock-local-auth": "0.0.6",
     "zone.js": "^0.6.12"
   },
   "scripts": {
