--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "sails-mongo": "^0.12.0",
     "systemjs": "0.19.6",
     "waterlock": "^0.1.0",
-    "waterlock-facebook-auth": "0.0.3",
+    "waterlock-facebook-auth": "nhodges/waterlock-facebook-auth",
     "waterlock-local-auth": "0.0.6",
     "zone.js": "^0.6.12"
   },
